<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.machanism.machai</groupId>
		<artifactId>machai</artifactId>
		<version>0.0.5-SNAPSHOT</version>
	</parent>

	<artifactId>bindex-core</artifactId>
	<name>Bindex Core</name>
	<description>
		bindex-core provides core functionality for bindex metadata management,
		including generation, registration, library selection, and project
		assembly. It enables automated handling of library metadata to support
		efficient discovery, integration, and assembly workflows within the
		Machanism ecosystem.
	</description>

	<properties>
		<maven.javadoc.skip>false</maven.javadoc.skip>
		<ae.dir>../genai-client/src/main/ae</ae.dir>
		<java.version>9</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.machanism.machai</groupId>
			<artifactId>genai-client</artifactId>
			<version>0.0.5-SNAPSHOT</version>
		</dependency>

		<!-- MongoDB Java Sync Driver v5.2.0 or later -->
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongodb-driver-sync</artifactId>
			<version>[5.2.0,)</version>
		</dependency>
		<!-- Java library for working with OpenAI models -->
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-open-ai</artifactId>
			<version>0.35.0</version>
		</dependency>
		<dependency>
			<groupId>org.tomlj</groupId>
			<artifactId>tomlj</artifactId>
			<version>1.1.1</version>
		</dependency>
		
		<!-- Maven libraries -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-model</artifactId>
			<version>${maven.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>${maven.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>${maven.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-connector-basic</artifactId>
			<version>1.3.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-transport-file</artifactId>
			<version>1.3.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-transport-http</artifactId>
			<version>1.3.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-transport-wagon</artifactId>
			<version>1.3.3</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jsonschema2pojo</groupId>
				<artifactId>jsonschema2pojo-maven-plugin</artifactId>
				<version>1.2.2</version>
				<configuration>
					<sourceDirectory>${basedir}/src/main/resources/schema</sourceDirectory>
					<targetPackage>org.machanism.machai.schema</targetPackage>
					<useTitleAsClassname>true</useTitleAsClassname>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://github.com/machanism-org/machai.git</connection>
		<developerConnection>scm:git:https://github.com/machanism-org/machai.git</developerConnection>
		<url>https://github.com/machanism-org/machai.git</url>
	</scm>

	<issueManagement>
		<url>https://github.com/machanism-org/machai/issues</url>
	</issueManagement>

	<developers>
		<developer>
			<name>Viktor Tovstyi</name>
			<email>viktor.tovstyi@gmail.com</email>
		</developer>
	</developers>

</project>
